--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "jalali-moment": "^3.3.11",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
